[gd_scene load_steps=10 format=3 uid="uid://clj25w4vcne7q"]

[ext_resource type="Texture2D" uid="uid://byspfak36ais0" path="res://Main Scenes/officeSheet.png" id="1_ej1m3"]
[ext_resource type="Texture2D" uid="uid://dec0vh6hd2g04" path="res://assets/atEase.png" id="2_wi0vg"]
[ext_resource type="Script" path="res://Main Scenes/at_ease.gd" id="3_yen8d"]
[ext_resource type="Script" path="res://Main Scenes/control.gd" id="5_ih2oa"]

[sub_resource type="AtlasTexture" id="AtlasTexture_domwp"]
atlas = ExtResource("1_ej1m3")
region = Rect2(0, 0, 198, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnod5"]
atlas = ExtResource("1_ej1m3")
region = Rect2(198, 0, 198, 108)

[sub_resource type="SpriteFrames" id="SpriteFrames_v8c4r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_domwp")
}],
"loop": true,
"name": &"closed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnod5")
}],
"loop": true,
"name": &"opened",
"speed": 5.0
}]

[sub_resource type="Curve2D" id="Curve2D_r83oa"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -320, 120, 0, 0, 0, 0, 0, 120)
}
point_count = 2

[sub_resource type="GDScript" id="GDScript_ttk42"]
script/source = "extends PathFollow2D


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[node name="Office" type="Node2D"]

[node name="Background" type="AnimatedSprite2D" parent="."]
z_index = -1
texture_filter = 1
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_v8c4r")
animation = &"closed"

[node name="Door" type="Timer" parent="Background"]

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true

[node name="NPC" type="Node2D" parent="."]

[node name="Path2D" type="Path2D" parent="NPC"]
curve = SubResource("Curve2D_r83oa")

[node name="PathFollow2D" type="PathFollow2D" parent="NPC/Path2D"]
position = Vector2(-320, 120)
loop = false
script = SubResource("GDScript_ttk42")

[node name="NPC" type="Sprite2D" parent="NPC/Path2D/PathFollow2D"]
position = Vector2(-13, -71.75)
scale = Vector2(0.908408, 0.753333)
texture = ExtResource("2_wi0vg")
script = ExtResource("3_yen8d")
speed = 100.0

[node name="Speech" type="Sprite2D" parent="NPC/Path2D/PathFollow2D/NPC"]
position = Vector2(90.818, -143.695)
scale = Vector2(0.474, 0.572)

[node name="Thought" type="Sprite2D" parent="NPC/Path2D/PathFollow2D/NPC"]
position = Vector2(115, -180)
scale = Vector2(0.474089, 0.571681)

[node name="Control" type="Control" parent="NPC/Path2D/PathFollow2D/NPC/Thought"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -433.0
offset_top = -272.5
offset_right = -258.0
offset_bottom = -122.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_ih2oa")
metadata/_edit_use_anchors_ = true

[node name="NPCSpawner" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="Background/Door" to="NPC/Path2D/PathFollow2D/NPC" method="_close_door"]
[connection signal="click" from="NPC/Path2D/PathFollow2D/NPC" to="NPC/Path2D/PathFollow2D/NPC/Thought/Control" method="_on_click"]
[connection signal="readyForNPC" from="NPC/Path2D/PathFollow2D/NPC" to="NPC/Path2D/PathFollow2D/NPC/Thought/Control" method="_on_ready_for_NPC"]
[connection signal="FUCKING_LEAVE" from="NPC/Path2D/PathFollow2D/NPC/Thought/Control" to="NPC/Path2D/PathFollow2D/NPC" method="_fucking_leave"]
[connection signal="mouse_entered" from="NPC/Path2D/PathFollow2D/NPC/Thought/Control" to="NPC/Path2D/PathFollow2D/NPC/Thought/Control" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="NPC/Path2D/PathFollow2D/NPC/Thought/Control" to="NPC/Path2D/PathFollow2D/NPC/Thought/Control" method="_on_mouse_exited"]
[connection signal="timeout" from="NPCSpawner" to="NPC/Path2D/PathFollow2D/NPC" method="spawnCustomer"]
